# scomp

./: .gitignore  Cargo.toml  README.md
resources/: list-mysql-columns.sql  list-mysql-indices.sql
src/: lib.rs  main.rs
src/compare_mysql/: collector.rs  mod.rs
src/value_object/: mod.rs  models.rs
tests/: tests.rs
tests/compare_mysql/: collector.rs  mod.rs
